# Omni-ST

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
configs/model/: default.yaml
configs/training/: stage2.yaml
datasets/: visium_dataset.py
evaluation/: metrics.py
files/: dataset.py
models/: __init__.py  gene_encoder.py  graph_encoder.py  image_encoder.py  instruction_adapter.py  multimodal_backbone.py  text_encoder.py
notebooks/: kaggle_omni_st.ipynb
preprocessing/: gene_processing.py  graph_construction.py
tasks/: task_heads.py
training/: losses.py  trainer.py
visualization/: plots.py
